--- a/_posts/Git_Github/CLI_명령어/2023-11-29-GIT 주로 사용하는 명령어 모음.md
+++ b/_posts/Git_Github/CLI_명령어/2023-11-29-GIT 주로 사용하는 명령어 모음.md
@@ -1,7 +1,7 @@
 ---
-title:  "GIT 주로 사용하는 명령어 (최신)"
+title:  "GIT 주로 사용하는 명령어 모음"
 categories : [Knowledge, Cli_Git]
-tag : [깃헙, 깃허브, git, github, 영역3가지, 작업환경, 스테이징, HEAD]
+tag : [깃헙, 깃허브, git, github, 영역 3가지, 작업 환경, 스테이징, HEAD]
 toc: true
 toc_sticky: true
 author_profile: false
@@ -12,79 +12,86 @@ typora-root-url: ../../..
 
 
 
-# Intro
+`GIT 3가지 영역`**을 배경으로 주로 사용하는 명령어들을 설명하려고 한다.**
 
-**1) GIT 3가지 영역은?**
+<br>
 
-**2) 최근까지 사용하면서 주로 사용했던 명령어들은?**
-
-**3) 스티커 메모장**
-
-**`3가지 영역` 을 배경으로 명령어들을 설명하려고 한다.**
-
-<br><br>
+<br>
 
 ## GIT 3가지 영역
 
 **GIT 3가지 영역을 항상 사용하기 때문에 반드시 인지**
 
-* **스테이징** 영역 : git add 로 보내는 곳
-* **HEAD** 영역 : 현재 `Git 저장소`가 가리키는 곳
-* **워킹트리** 영역 : 작업 디렉터리
-* **중요!) HEAD와 워킹트리의 변경사항을 매번 비교 -> 모든 변경 사항을 바로 커밋하는 게 아니라 스테이징(=INDEX)에 추가된 내용만이 커밋**
+* **스테이징** 영역 : git add로 보내는 곳
+* **HEAD** 영역 : 현재 `Git 저장소`가 가리키는 곳 (원격 저장소)
+* **워킹 트리** 영역 : 작업 디렉터리 (예로 로컬)
+* **중요!) HEAD와 워킹 트리의 변경사항을 매번 비교 -> 모든 변경 사항을 바로 커밋하는 게 아니라 스테이징(=INDEX)에 추가된 내용만이 커밋**
 
-<br><br>
+<br>
+
+<br>
 
 ## 주로 사용하는 명령어
 
-* **git init : `Git 저장소`를 초기화**
+* **git init : Git 저장소를 초기화**
+  
   * 워킹 트리 생성 효과
   * git status -> No commits yet 출력
   * HEAD가 가리키는 커밋이 없는 특수한 상태!
 * **git reflog : HEAD가 가리키는 커밋 출력**
+  
   * HEAD는 최종적으로 커밋한 시점의 "워킹 트리 스냅샷"
-  * 단, 어느 커밋이든 HEAD가 되게끔 자유자재로 다룰수 있음
+  * 단, 어느 커밋이든 HEAD가 되게끔 자유자재로 다룰 수 있음
 * **git clone : `원격 저장소`를 가져옴**
-  * git clone [REPO_URL] [DIR] 로 디렉터리를 지정할 수 있다!
+  * git clone [REPO_URL] [DIR]로 디렉터리를 지정할 수 있다!
 * **git add : 스테이징 영역(INDEX)에 파일 추가!**
-  * 스테이징에 추가된 변경내역들만 commit 후보가 될 수 있는것!
-* **git status : HEAD, 워킹트리, 스테이징을 비교!**
-  * **git status -s 추천** : ??은 Untracked / M 커밋대상 / D 커밋대상 / MM 커밋대상+워킹트리 변경	
-    * **첫번째는 스테이징 영역, 두번째는 워킹트리 영역!**
+  
+  * 스테이징에 추가된 변경 내역들만 commit 후보가 될 수 있는 것!
+* **git status : HEAD, 워킹 트리, 스테이징을 비교!**
+  
+  * **git status -s 추천** : ??은 Untracked / M 커밋 대상 / D 커밋 대상 / MM 커밋 대상+워킹 트리 변경
+    * **첫 번째는 스테이징 영역, 두 번째는 워킹 트리 영역!**
   * `Git 저장소`의 상태를 확인
-  * "working tree clean" - **HEAD, 워킹트리 가 동일**을 의미
-  * "Untracked files" - **워킹트리에 있으나 HEAD, 스테이징엔 없는 경우**를 의미
+  * "working tree clean" - **HEAD, 워킹 트리가 동일**을 의미 **(원격 <-> 로컬 저장소 동일 의미)**
+  * "Untracked files" - **워킹 트리에 있으나 HEAD, 스테이징엔 없는 경우**를 의미
   * "Changes to be committed" - **이미 스테이징**된 커밋 후보들을 의미
   * "Changes not staged for commit" - **이미 스테이징된 파일이 변경**된 경우를 의미
-    * 변경내역을 새로 스테이징 하려면 git add 를 또 해줘야 함!
-  * "discard changes" - **변경내용 삭제** 의미
-  * "staged changes" - **변경내용 유지** 의미
+    * 변경 내역을 새로 스테이징 하려면 git add를 또 해줘야 함!
+  * "discard changes" - **변경 내용 삭제** 의미
+  * "staged changes" - **변경 내용 유지** 의미
 * **git commit : 새로운 커밋 생성**
 * **git stash 사용법: 커밋하지 않고 변경사항 저장하는 방법**
+  
   * "Changes to be committed, Changes not staged for commit" 같은 변경사항들을 쉽게 저장
-  * 커밋으로 변경사항 저장후 해당커밋을 수정해도 되지만 **커밋쓰고 싶지 않을때 유용**
+  * 커밋으로 변경사항 저장 후 해당 커밋을 수정해도 되지만 **커밋 쓰고 싶지 않을 때 유용**
   * **git stash pop** 저장한 내용 사용
-* **git revert : 커밋한 내용을 되돌리기**
-  * **git revert 커밋ID --no-edit** : 특정 커밋으로 이동, no-edit은 커밋메시지 수정생략
-  * **브랜치를 입력**해도 이동가능
-    * **해당 브랜치의 최신 커밋ID**를 자동으로 기입해주기 때문
+* **git revert : 커밋한 내용을 되돌리기(커밋 새로 씀)**
+  
+  * **git revert 커밋 ID --no-edit** : 특정 커밋으로 이동, no-edit은 커밋 메시지 수정 생략
+  * **브랜치를 입력**해도 이동 가능
+    
+    * **해당 브랜치의 최신 커밋 ID**를 자동으로 기입해주기 때문
   * **merge한 커밋의 경우**
-    * git cat-file -p 커밋ID : merge하는 부모 커밋 2개 확인
-    - git revert 커밋ID -m 1 or 2
-  * 참고 : [git revert 자세한 동작원리](https://www.lainyzine.com/ko/article/git-revert-reverting-commit-in-git-repository/)
-* **git reset : 커밋한 내용을 되돌리기(히스토리를 고쳐씀)**
-  * **git reset --hard 커밋ID : 강제 PULL에 효과적, 브랜치도 가능**
+    * git cat-file -p 커밋 ID : merge하는 부모 커밋 2개 확인
+    - git revert 커밋 ID -m 1 or 2
+  * 참고 : [git revert 자세한 동작 원리](https://www.lainyzine.com/ko/article/git-revert-reverting-commit-in-git-repository/)
+* **git reset : 커밋한 내용을 되돌리기(히스토리를 고쳐 씀)**
+  
+  * **git reset --hard 커밋 ID : 강제 PULL에 효과적, 브랜치도 가능**
 * **git rebase : 커밋 수정하기**
-  * **예시) git rebase -i 수정할커밋 이전이름**
-    - vi에디터 접근 (:wq-저장&탈출, :q!-탈출)
+  
+  * **예시) git rebase -i 수정할 커밋 이전 이름**
+    - vi 에디터 접근 (:wq-저장&탈출, :q!-탈출)
     - pick을 drop으로 수정(=삭제)
 * **git merge : 브랜치 병합**
-  * git merge 브랜치명 : 해당 브랜치와 현재 브랜치를 병합합니다.
-  * **git merge --no-commit --no-ff 브랜치명 -X theirs : 다른브랜치 특정 파일(폴더) 병합 - 강제로**
+  
+  * git merge 브랜치명 : 작성한 브랜치와 현재 브랜치를 병합합니다.
+  * **git merge --no-commit --no-ff 브랜치명 -X theirs : 다른 브랜치 특정 파일(폴더) 병합 - 강제로**
     * git reset HEAD 파일명1 파일명2 : 기존 브랜치의 파일을 보존도 가능
     * -X theirs : 충돌이 발생한 경우, 대상 브랜치의 변경 사항이 현재 브랜치의 변경 사항을 덮어씁니다.
-* **git checkout -p : 다른브랜치 특정 파일(폴더) 병합 - 패치모드**
+* **git checkout -p : 다른 브랜치 특정 파일(폴더) 병합 - 패치 모드**
 * **git clean : Git으로 관리되지 않는 파일 정리**
+  
   * **git clean -f** : Untracked 파일들을 일괄 삭제 - 단, -f 옵션 필수
   * 2가지 관점 : Git 저장소에서 관리되는 파일 / 관리되지 않는 파일(Untracked)
   * 주의 : **merge 커밋**을 되돌릴 때는 꼭 어떤 커밋으로 되돌릴지 명시해줘야 한다.
@@ -94,7 +101,7 @@ typora-root-url: ../../..
 
 ## 스티커 메모장
 
-**실제로 스티커 메모장에 기록해두고 사용중인 GIT 명령어**
+**실제로 스티커 메모장에 기록해두고 사용 중인 GIT 명령어**
 
 ```
 GIT 리뉴얼
@@ -304,11 +311,3 @@ git clean -f : Untracked 파일들을 일괄 삭제
 * `"다른_브랜치"`는 병합하고자 하는 다른 브랜치의 이름입니다.
 ```
 
-<br><br>
-
-# Outro
-
-**참고 사이트**
-
-* [GIT 자주 사용 명령어](https://www.lainyzine.com/ko/article/summary-of-git-commands-and-subcommands/#git-init-git)
-* [GIT 3가지 중요 영역](https://www.lainyzine.com/ko/article/git-head-and-working-tree-and-staging-area/)
