--- a/_posts/Git_Github/CLI_명령어/2023-11-29-GIT 주로 사용하는 명령어 모음.md
+++ b/_posts/Git_Github/CLI_명령어/2023-11-29-GIT 주로 사용하는 명령어 모음.md
@@ -103,6 +103,8 @@ typora-root-url: ../../..
 
 **실제로 스티커 메모장에 기록해두고 사용 중인 GIT 명령어**
 
+<details><summary><b>스티커 메모장</b></summary>
+<div markdown="1">
 ```
 GIT 리뉴얼
 GIT 설치 -> CLI, WINDOW 중 CLI 방식 사용 : git bash
@@ -310,4 +312,9 @@ git clean -f : Untracked 파일들을 일괄 삭제
 * 여기서 `"폴더_경로"`는 메인 브랜치로 가져오고자 하는 특정 폴더의 경로를 나타내며, 
 * `"다른_브랜치"`는 병합하고자 하는 다른 브랜치의 이름입니다.
 ```
+</div>
+</details>
+```
+
+
 
