--- a/_posts/Knowledge/Knowledge/2022-06-28-크로스 브라우징,JS_웹 통신,Node.js,Package-lock.json.md
+++ b/_posts/Knowledge/Knowledge/2022-06-28-크로스 브라우징,JS_웹 통신,Node.js,Package-lock.json.md
@@ -89,12 +89,12 @@ typora-root-url: ../../..
 
 **동기식 통신과 반대로 요청 후 Response가 올 때까지 기다리지 않는 통신(동시에X)**  
 
-* **예전** : HTTP 통신은 요청 후 응답이 올때까지 대기
+* **예전** : HTTP 통신은 요청 후 응답이 올 때까지 대기
   * 따라서 새로운 정보 요청하려면 **페이니 이동, 새로고침**을 했어야 함
-* **현재** : 이를 해결한것이 비동기통신(Non-Block 상태/통신이라고도 함)
+* **현재** : 이를 해결한 것이 비동기통신(Non-Block 상태/통신이라고도 함)
   * 이를 활용해 **페이지 이동, 새로고침 없이** 추가 정보 요청
   * 현재 인스타 예로, 페이지 내에서 좋아요가 가능한 이유
-* **단점** : 순서가 보장되지 않으므로 신경써서 처리 해줘야 함
+* **단점** : 순서가 보장되지 않으므로 신경 써서 처리 해줘야 함
 
 ![image-20220628183419011](/images/2022-06-28-크로스 브라우징,JS_웹 통신,npm,yarn,git/image-20220628183419011.png)
 
@@ -108,11 +108,11 @@ typora-root-url: ../../..
 
 **Node.js는 자바스크립트를 브라우저가 아닌 환경에서 실행할 수 있게 해주는 런타임 환경**
 
-* 프레임워크라 알려져있으나 C언어의 **VS(gcc)** 또는 Java의 **Eclipse(JVM, JRE)**와 같은 역할
-* 또한 서버 언어로 알려져 있으나, 이또한 **Node.js의 기능** 중 하나
+* 프레임워크라 알려져 있으나 C언어의 **VS(gcc)** 또는 Java의 **Eclipse(JVM, JRE)**와 같은 역할
+* 또한 서버 언어로 알려져 있으나, 이 또한 **Node.js의 기능** 중 하나
   * Express.js, Next.js 프레임워크가 서버 개발로 유명
-* 참고로 브라우저처럼 ECMAScript사양 따르나, **브러우저와는 환경이 다르므로 차이**있음
-  * 예로 브라우저에서만 사용하는 **alert**메소드라던지 등..
+* 참고로 브라우저처럼 ECMAScript사양 따르나, **브라우저와는 환경이 다르므로 차이** 있음
+  * 예로 브라우저에서만 사용하는 **alert**메소드라든지 등..
 
 <br>
 
@@ -146,7 +146,7 @@ typora-root-url: ../../..
 
 ### version range
 
-* **"express" : "~3.5.1"**처럼 사용하는 버전이 정확한게 아닌 이상, 이하로 나타낸 방식
+* **"express" : "~3.5.1"**처럼 사용하는 버전이 정확한 게 아닌 이상, 이하로 나타낸 방식
 * **package.json** : version range방식 사용
 * **package-lock.json** : 기존 정확한 버전 방식 사용
 
@@ -154,19 +154,19 @@ typora-root-url: ../../..
 
 ### version range의 문제점
 
-3.5.1 버전과 3.5.0 인 버전을 서로 사용해서 버전 문제로 코드가 돌아가지 않을 수 있다.  
-이는 **정확한 버전 방식을 사용해야할 필요성**을 가진다.
+3.5.1 버전과 3.5.0인 버전을 서로 사용해서 버전 문제로 코드가 돌아가지 않을 수 있다.  
+이는 **정확한 버전 방식을 사용해야 할 필요성**을 가진다.
 
 
 
 ### version range의 문제점 해결
 
-**해결 방안이** **package-lock.json** 이다.
+**해결 방안이** **package-lock.json**이다.
 
-package-lock.json이 있다면 npm install로 모듈을 설치할때 package.json이 아닌 package-lock.json을 이용해 설치하기 때문이다.
+package-lock.json이 있다면 npm install로 모듈을 설치할 때 package.json이 아닌 package-lock.json을 이용해 설치하기 때문이다.
 
 
 
-### 문제있어도 version range를 쓰는 이유?
+### 문제 있어도 version range를 쓰는 이유?
 
-만약 package.json에 버전명을 정확히 입력한다면 아주 작은 버그 수정이 이루어질때마다 매번 버전 업그레이드를 package.json에서도 수정해야 하기 때문. 이를 version range를 사용해 수고를 덜고 있었던것이다.
+만약 package.json에 버전명을 정확히 입력한다면 아주 작은 버그 수정이 이루어질 때마다 매번 버전 업그레이드를 package.json에서도 수정해야 하기 때문. 이를 version range를 사용해 수고를 덜고 있었던 것이다.
