--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-28-(바킹독)12~25강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-28-(바킹독)12~25강 필수 문제모음.md
@@ -12,15 +12,13 @@ typora-root-url: ../../..
 
 
 
+**유튜버 바킹독님의 영상에서 추천해주신 각 파트별 연습문제이다.**
 
+**최소한 해당 연습문제들은 풀 줄 알아야 하며, 이번 12장부터는 심화된 알고리즘 내용이다.**
 
-# Intro..
+<br>
 
-**유투버 바킹독님의 영상에서 추천해주신 각 파트별 연습문제이다.**
-
-**최소한 해당 연습문제들은 풀 줄 알아야하며, 이번 12장부터는 딥한 알고리즘 내용들이다.**
-
-<br><br>
+<br>
 
 # 문제 이동
 
