--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-알고리즘 기초 - 수학(개념).md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-알고리즘 기초 - 수학(개념).md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준_강의1]알고리즘 기초1 - 수학(개념)"
+title:  "알고리즘 기초 - 수학(개념)"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이, 나머지 연산, 최대 공약수, GCD, 최소 공배수, LCM, 서로소, 유클리드 호제법, 소수, 에라토스테네스의 체, 소인수, 소인수분해, 조합, 2진법, 8진법, 16진법, 10진법]
 toc: true
@@ -12,11 +12,11 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+**백준 문제 풀면서 마주친 기초 수학 개념**
 
-**백준 문제 풀면서 마주친 수학 개념**
+<br>
 
-<br><br>
+<br>
 
 ## 최대 공약수(GCD), 최소 공배수(LCM)
 
@@ -31,20 +31,18 @@ typora-root-url: ../../..
 - **참고**
   - 나누는 것은 나눠지는 가장 작은 소수부터 나눠야 한다.
   - 공약수, 공배수 에서 1은 무조건 기본으로 있다는걸 기억
-  - 동일한 수들을 입력받은 경우 최대공약수, 최소공배수는 당연히 입력받은 수가 되는것은 자명
-
-![image-20230206184300906](/images/2023-02-19-(C++)최대공약수와 최소공배수 - 백준2609/image-20230203174644617.png)
+  - 동일한 수들을 입력받은 경우 최대공약수, 최소공배수는 당연히 입력받은 수가 되는것은 자명![image-20230206184300906](/images/2023-02-19-(C++)최대공약수와 최소공배수 - 백준2609/image-20230203174644617.png)
 
 <br>
 
 **두개의 수(물론 여러개의 수도 다룰 줄 알아야 함)를 입력받아서 GCD, LCM을 구하는 문제에서 필요했던 개념이다.**
 
-<br>
+<br><br>
 
 ### 중요!! 유클리드 호제법
 
 **그냥 나눠지는 가장 작은 소수로 나눠가면서 약수들을 구하는게 제일 평범한 방법이지만 속도가 느리다.  
-이때 빠르게 구할수 있는 또다른 방법이 "유클리드 호제법"이다.**
+이때 빠르게 구할 수 있는 또다른 방법이 "유클리드 호제법"이다.**
 
 * `호제법` : 두 수가 서로 상대방의 수를 나누어서 원하는 수를 얻는 방법
   - `유클리드 호제법` : 2개의 자연수 a, b에 대해서 a를 b로 나눈 나머지를 r이라고 하면(단, a> b), a와 b의 최대 공약수는 b와 r의 최대 공약수와 같다.
@@ -54,7 +52,9 @@ typora-root-url: ../../..
   * 먼저, gcd(a,b)를 유클리드 호제법 함수라고 가정하자!
   * 4개의 수가 a,b,c,d라면 gcd(gcd(gcd(a,b),c),d) 이런 느낌으로 재귀나 for문으로 구하면 된다.
 
-<br><br>
+<br>
+
+<br>
 
 ## 소수
 
@@ -68,9 +68,11 @@ typora-root-url: ../../..
 
 * 소인수분해처럼 직접 나눠서 약수들을 구해서 판별하는 방식(속도 느림)
 
-<br>
+**방법2) 에라토스테네스의 체 -> 다음 정리 참고**
 
-### 중요!! 방법2) 에라토스테네스의 체 방식
+<br><br>
+
+### 중요!! 에라토스테네스의 체 방식
 
 * 초기 배열(prime[]) 값은 false로 초기화
   - false면 소수 , true면 소수 아닌것을 의미
@@ -99,17 +101,17 @@ while (p * p <= N) {
 }
 ```
 
-<br><br>
+<br>
+
+<br>
 
 ## 소인수분해
 
-* 소인수 : 주어진 자연수의 약수 중에서 소수인걸 의미
+* 소인수 : 주어진 자연수의 약수 중에서 소수인 것을 의미
 
 * 소인수분해 : 자연수를 소인수들의 곱으로 표현하는 것
   * 나누는 것은 나눠지는 가장 작은 소수로부터 나눠야 한다.
-  * 즉, 60 = 2 x 2 x 3 x 5 로 소인수 분해가 된다.
-
-![image-20230206184300906](/images/2023-02-09-(백준)알고리즘 기초1 - 수학/image-20230206184300906.png)
+  * 즉, 60 = 2 x 2 x 3 x 5 로 소인수 분해가 된다.![image-20230206184300906](/images/2023-02-09-(백준)알고리즘 기초1 - 수학/image-20230206184300906.png)
 
 <br>
 
@@ -123,16 +125,16 @@ while (p * p <= N) {
   * 자세한 내용은 `팩토리얼 0의 개수` 풀이 게시글 참고
   * 물론 이것 말고도 응용 문제는 다양하다.
 
-<br>
+<br><br>
 
-### 중요! 약수에 존재하는 특정 수의 개수
+### 중요!! 약수에 존재하는 특정 수의 개수
 
 **`팩토리얼 0의 개수` 문제에서 필요한 수학적 개념이다. (두번째 방식을 익혀둘 것)**
 
 * **첫번째 방식은(가장 간단)**
   - 예로 5의 개수를 구할땐? 약수 구할때처럼 그냥 5로 나누어 떨어지면 1개(즉, 나머지=0)
   - 그 값에 또 5로 나누어 떨어지면 1개 추가, 이를 반복...
-  - 안나누어 떨어질때까지(즉, 나머지!=0) 합하면 이때 5의 총 개수가 됨.
+  - 안 나누어 떨어질 때까지(즉, 나머지!=0) 합하면 이때 5의 총 개수가 됨.
 * **두번째 방식은(더 빠름)**
   - 예로 `10!` 의 경우? `10!=1*2*3*4*5*6*7*8*9*10` 이다.
   - **5로 해당 `10` 을 나누어주면?? 1~10 곱 사이의 5가 나온 개수가 출력된다 => 이 특징을 이용!**
@@ -148,7 +150,9 @@ while (p * p <= N) {
     - 해당 원리를 이용한다면?
       - **EX) 5의 개수 : 25/5 = 5, 25/25 = 1 => 총 6개**
 
-<br><br>
+<br>
+
+<br>
 
 ## 조합
 
@@ -156,7 +160,9 @@ while (p * p <= N) {
 
 * 물론 이 조합을 DP로 구하던 방식도 있음!! (생각보다 간단)
 
-<br><br>
+<br>
+
+<br>
 
 ## A진법 to B진법(=A진수 to B진수)의 변환과 관계
 
