--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(필수2)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(필수2)알고리즘 필수 코드암기.md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준_필수4]알고리즘 필수 코드암기"
+title:  "[필수2]알고리즘 필수 코드암기"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이, 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합, 완전탐색, 브루트포스, 이분탐색]
 toc: trues
@@ -20,7 +20,7 @@ typora-root-url: ../../..
 
 ## 연습
 
-**BFS, DFS, 순열, 조합, 부분집합**
+### **BFS, DFS, 순열, 조합, 부분집합**
 
 ```java
   public static void main(String[] args) {
@@ -101,9 +101,9 @@ typora-root-url: ../../..
   }
 ```
 
-<br>
+<br><br>
 
-**위상정렬, 플로이드, 다익스트라, 프림, 크루스칼**
+### **위상정렬, 플로이드, 다익스트라, 프림, 크루스칼**
 
 ```java
 /**
@@ -168,9 +168,9 @@ typora-root-url: ../../..
   }
 ```
 
-<br>
+<br><br>
 
-**이분탐색**
+### **이분탐색**
 
 ```java
 /**
@@ -231,7 +231,7 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
 
 ## 답안
 
-**BFS, DFS, 순열, 조합, 부분집합**
+### **BFS, DFS, 순열, 조합, 부분집합**
 
 ```java
 /**
@@ -378,9 +378,9 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
 
 ```
 
-<br>
+<br><br>
 
-**위상정렬, 플로이드, 다익스트라, 프림, 크루스칼**
+### **위상정렬, 플로이드, 다익스트라, 프림, 크루스칼**
 
 ```java
 /**
@@ -684,9 +684,9 @@ debug -> outArr1, outArr2
   }
 ```
 
-<br>
+<br><br>
 
-**이분탐색**
+### **이분탐색**
 
 ```java
 /**
@@ -782,7 +782,7 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
 
 ## 출력 예시
 
-**BFS, DFS, 순열, 조합, 부분집합**
+### **BFS, DFS, 순열, 조합, 부분집합**
 
 ```java
 //BFS
