--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -12,15 +12,11 @@ typora-root-url: ../../..
 
 
 
-## Intro
-
-코테를 준비하기 위해서 백준 문제를 풀기 시작!! 
-
-여러 유튜브나 정보들을 토대로 어떤 방식으로 문제를 풀어나갈지를 생각해보았다.
+코테를 준비하기 위해서 백준 문제를 풀기 시작!! 여러 유튜브나 정보들을 토대로 어떤 방식으로 문제를 풀어나갈지를 생각해보았다.
 
 <br>
 
-**참고(수정본)**
+**참고 -> 최신ver**
 
 - 이 글은 옛날에 작성했던 글인데 아래내용은 좀 **옛날 방식**인것 같아서 **최근에 느낀 방식**을 간략히 소개한다.
 - 지금은 좋은 알고리즘 강의가 많기 때문에 필자는 처음이면 꼭 **"강의듣기"**를 추천한다.
@@ -32,9 +28,11 @@ typora-root-url: ../../..
     - 특히, [백준 문제집](https://www.acmicpc.net/workbook/top) 여기에 문제집 다양하게 있어서 골라 풀어도 된다.
   - 구현(시뮬레이션) 풀 때
     - 개인적으로 [삼선 SW 기출](https://www.acmicpc.net/workbook/view/1152) 문제집 추천하고, **"프로그래머스에 카카오 문제"**들을 추천한다.
-- **마지막으로 본인이 참고용으로 작성한 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/)"**
+- **마지막으로 본인이 참고용으로 작성한 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(필수1)백준-풀이-알고리즘-템플릿-java/)"**
 
-<br><br>
+<br>
+
+<br>
 
 ## 강의 추천
 
@@ -47,7 +45,9 @@ typora-root-url: ../../..
 * **인프런 강의에서 10주완성 C++코딩테스트(백준 플레이상 또는 프로그래머스 레벨5)**
 * **백준 사이트에도 강의가 있다고 한다!!**
 
-<br><br>
+<br>
+
+<br>
 
 ## 필수적인 개념학습
 
@@ -56,7 +56,9 @@ typora-root-url: ../../..
 
 `누적합, 구현, 그래프이론, DFS, BFS, 트리순회, 완탐, 백트래킹, 비트마스킹, 그리디, 라인스위핑, 투포인터, LIS, 이분탐색, DP, 최단거리, 펜윅트리`
 
-<br><br>
+<br>
+
+<br>
 
 ## 백준 사이트 활용법
 
@@ -104,7 +106,9 @@ typora-root-url: ../../..
 
 추가로 "바킹독"님 블로그에 알고리즘을 정말 잘 알려주셔서 많은 도움이 되었다.
 
-<br><br>
+<br>
+
+<br>
 
 ## 참고 URL
 
