--- a/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
@@ -12,9 +12,7 @@ typora-root-url: ../../..
 
 
 
-## Intro
-
-**'백준' 을 통해서 이미 코테 준비를 시작했었는데, 최근에 SQL문 관련한 문제는 '프로그래머스' 에서 풀 수 있다는걸 알게 되었다.**
+**'백준' 을 통해서 이미 코테 준비를 시작했었는데, SQL문 관련한 문제는 '프로그래머스' 에서 풀 수 있다는걸 알게 되었다.**
 
 따라서 '프로그래머스' 에서는 `SQL문` 관련한 문제들을 중점으로 풀어볼 생각이다.  
 
@@ -23,6 +21,8 @@ typora-root-url: ../../..
 아래는 따로 정리한 SQL 템플릿이다.
 
 - [SQL 템플릿](https://bh946.github.io/programmerstest/(MySQL)SQL-%ED%85%9C%ED%94%8C%EB%A6%BF/)
-
-<br><br>
+- [SQL LV 1](https://bh946.github.io/programmerstest/(MySQL)LV-1-%EB%AC%B8%EC%A0%9C-%EB%AA%A8%EC%9D%8C/)
+- [SQL LV 2](https://bh946.github.io/programmerstest/(MySQL)LV-2-%EB%AC%B8%EC%A0%9C-%EB%AA%A8%EC%9D%8C/)
+- [SQL LV 3](https://bh946.github.io/programmerstest/(MySQL)LV-3-%EB%AC%B8%EC%A0%9C-%EB%AA%A8%EC%9D%8C/)
+- [SQL LV 4](https://bh946.github.io/programmerstest/(MySQL)LV-4-%EB%AC%B8%EC%A0%9C-%EB%AA%A8%EC%9D%8C/)
 
