--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-01-알고리즘 문제풀기 전 필독!! - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-01-알고리즘 문제풀기 전 필독!! - cpp.md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준_필수1]알고리즘 문제풀기 전 필독!! - c++"
+title:  "알고리즘 문제풀기 전 필독!! - c++"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: trues
@@ -12,11 +12,15 @@ typora-root-url: ../../..
 
 
 
+**복잡도와 STL의 값 복사 주의와 입출력 상승법을 알고가자.**
 
+<br>
 
-# 시간, 공간복잡도
+<br>
 
-**반드시 알고리즘을 짜기 전에 복잡도가 넘지 않는지 체크해야하며, 넘는다면 그것은 잘못된 풀이법이므로 빠르게 다른 풀이법을 생각해내야한다.**
+## 시간, 공간복잡도
+
+**반드시 알고리즘을 작성하기 전에 복잡도를 초과하지 않는지 확인해야 하며, 넘는다면 그것은 잘못된 풀이법이므로 빠르게 다른 풀이법을 생각해내야 한다.**
 
 **아래 기준표는 정확한 기준은 아니고, 대략적으로 이렇다는 것.**
 
@@ -24,9 +28,7 @@ typora-root-url: ../../..
 
 **시간복잡도**
 
-* 컴퓨터가 대략 1억 번의 계산이 1초 내에 가능하다고 기억(실제론 좀 더 계산)
-
-![image-20230428154114290](/images/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!!/image-20230428154114290.png)
+* 컴퓨터가 대략 1억 번의 계산이 1초 내에 가능하다고 기억(실제로는 더 많은 계산 가능)![image-20230428154114290](/images/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!!/image-20230428154114290.png) 
 
 <br>
 
@@ -34,11 +36,13 @@ typora-root-url: ../../..
 
 * **512MB = 1.2억개의 int**
 
-<br><br>
+<br>
 
-# STL과 함수인자(값 복사 주의)
+<br>
 
-**C++에서 STL을 인자로 넘길때는 `int num` 같은 변수를 인자로 넘길때처럼 값이 복사가 되어 넘어간다.**
+## STL과 함수인자(값 복사 주의)
+
+**C++에서 STL을 인자로 넘길때는** `int num` **같은 변수를 인자로 넘길때처럼 값이 복사가 되어 넘어간다.**
 
 **문제점 : STL을 함수 인자로 넘길 때 복제한다. 즉, O(N)**
 
@@ -58,13 +62,13 @@ bool cmp1(vector<int>& v1, vector<int>& v2, int idx){
 }
 ```
 
-<br>
+<br><br>
 
-## STL vector
+### STL vector
 
 **매우 주의해야할 점이 있다.**
 
-**첫번째로 vector처럼 STL은 분명 함수 인자에서처럼 값이 복사되는 형태로 `int num` 같은 변수처럼 동작한다고 했다. 따라서 `=` 을 입력하면 깊은복사가 발생한다.**
+**첫번째로 vector처럼 STL은 분명 함수 인자에서처럼 값이 복사되는 형태로** `int num` **같은 변수처럼 동작한다고 했다. 따라서** `=` **을 입력하면 깊은복사가 발생한다.**
 
 ```c++
 vector<int> v3 = {1,2,3,4};
@@ -82,20 +86,24 @@ for(int i=0; i<v1.size(); i++) cout << v1[i] << ' '; // 정상
 for(int i=0; i<v1.size()-1; i++) cout << v1[i] << ' '; // 언더플로
 ```
 
-<br><br>
+<br>
 
-# 표준 입출력(속도UP)
+<br>
 
-**`ios::sync_with_stdio(0), cin.tie(0)` 을 사용할 것.**
+## 표준 입출력(속도UP)
+
+`ios::sync_with_stdio(0), cin.tie(0)` **을 사용할 것.**
 
 * 0은 false를 의미한다.
-* 백준 사이트에서는 채점을 할 때 순서는 상관 없이 출력 글자만 확인하므로 `cin.tie(0)` 를 써서 버퍼에 값을 모아서 한번에 출력하자.   
-  즉, 버퍼에 넣었다 뺏다가 하면서 매번 낭비를 하지말고 버퍼에 값을 한번에 모아서 출력!!! (순서가 엉망이 되는 문제가 있지만 백준 사이트에서는 상관없다)
+* 백준 사이트에서는 채점을 할 때 순서는 상관 없이 출력 글자만 확인하므로 `cin.tie(0)` 를 써서 버퍼에 값을 모아서 한 번에 출력하자.   
+  즉, 버퍼에 넣었다 뺏다가 하면서 매번 낭비하지 말고 버퍼에 값을 한 번에 모아서 출력!!! (순서가 엉망이 되는 문제가 있지만 백준 사이트에서는 상관없다)
 * c++은 printf와 cin이 같이 사용되게 허용하므로 낭비가 발생한다. 따라서 `ios::sync_with_stdio(0)` 를 써서 cin만 사용하게끔 변경한다. 즉, 이 명령어와 함께 C++의 입출력만 반드시 사용하자!
 
-<br><br>
+<br>
 
-# 코드 작성 팁
+<br>
+
+## 코드 작성 팁
 
 **지금 우리는 문제를 빨리 푸는데 중점을 둬야지 유지보수를 위해 가독성 좋은 코드나 이런걸 짜는게 아니다.  
 즉, 개발과 코딩테스트는 다르다.**
