--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(필수1)백준 풀이 알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(필수1)백준 풀이 알고리즘 템플릿 - java.md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준_필수3]알고리즘 템플릿 - java"
+title:  "[필수1]백준 풀이 알고리즘 템플릿 - java"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: trues
@@ -11,8 +11,6 @@ typora-root-url: ../../..
 ---
 
 
-
-# Intro..
 
 **사용할 알고리즘들의 템플릿들을 정리하겠다.**
 
@@ -2016,7 +2014,7 @@ static int dfs(int x, int y){
 
 ## 수학(Math)
 
-**자세한 개념은 반드시 [알고리즘 기초1 - 수학](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%EA%B0%95%EC%9D%981)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%EA%B8%B0%EC%B4%881-%EC%88%98%ED%95%99(%EA%B0%9C%EB%85%90)/), [바킹독 - 수학](https://blog.encrypted.gg/983) 게시물을 함께 참고**
+**자세한 개념은 반드시 [알고리즘 기초 - 수학](https://bh946.github.io/baekjoon/알고리즘-기초-수학(개념)), [바킹독 - 수학](https://blog.encrypted.gg/983) 게시물을 함께 참고**
 
 <br>
 
