--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(바킹독)1~11강 필수 문제모음.md
@@ -12,15 +12,13 @@ typora-root-url: ../../..
 
 
 
+**유튜버 바킹독님의 영상에서 추천해주신 각 파트별 연습문제이다.**
 
+**최소한 해당 연습문제들은 풀 줄 알아야 하며, 이번 1~11장 까지는 코테에도 자주 출제되는 매우 중요한 개념들이므로 최소한 여기까지는 완벽히 알아야 한다.**
 
-# Intro..
+<br>
 
-**유투버 바킹독님의 영상에서 추천해주신 각 파트별 연습문제이다.**
-
-**최소한 해당 연습문제들은 풀 줄 알아야하며, 이번 1~11장 까지는 코테에도 자주 출제되는 매우 중요한 개념들이므로 최소한 여기까지는 완벽히 알아야 한다.**
-
-<br><br>
+<br>
 
 # 문제 이동
 
@@ -29,7 +27,7 @@ typora-root-url: ../../..
     * N복잡도로 풀이가능
 * **연결 리스트**
   * **[에디터](https://www.acmicpc.net/problem/1406)**
-    * 스택 2개 또는 직접 연결리스트도 가능하지만 `list`  STL자료구조 추천
+    * 스택 2개를 사용하거나 직접 연결 리스트를 구현할 수도 있지만 `list`  STL 자료구조를 추천
 * **스택**
   * **[스택](https://www.acmicpc.net/problem/10828)**
     * 직접 구현 or `stackt` STL자료구조 추천
@@ -69,26 +67,23 @@ typora-root-url: ../../..
   * [감시](https://www.acmicpc.net/problem/15683)
   * [스티커 붙이기](https://www.acmicpc.net/problem/18808)
   * **[2048 (Easy)](https://www.acmicpc.net/problem/12100)** 
-    * 구현... 너무 어려워
   * [치킨 배달](https://www.acmicpc.net/problem/15686)
 * **정렬 I**
   * pass
 * **정렬 II**
   * [카드](https://www.acmicpc.net/problem/11652)
-    * 정렬은 그냥 `STL` 제공 하는 `sort` 함수 권장
+    * 정렬은 그냥 `STL` 제공하는 `sort` 함수 권장
 * **다이나믹 프로그래밍** 
   * [1로 만들기](https://www.acmicpc.net/problem/1463)
   * [1,2,3 더하기](https://www.acmicpc.net/problem/9095)
   * [계단 오르기](https://www.acmicpc.net/problem/2579)
   * [RGB 거리](https://www.acmicpc.net/problem/1149) 
-    * top-bottom, bottom-top 둘다 풀어봄
   * [2xn 타일링](https://www.acmicpc.net/problem/11726)
   * [구간 합 구하기 4](https://www.acmicpc.net/problem/11659)
   * [1로 만들기 2](https://www.acmicpc.net/problem/12852)
 * **그리디** 
   * [동전 0](https://www.acmicpc.net/problem/11047)
   * [회의실배정](https://www.acmicpc.net/problem/1931)
-    * 안푸러.. DP도써야해..
   * [로프](https://www.acmicpc.net/problem/2217)
   * [보물](https://www.acmicpc.net/problem/1026)
   * **잘못된 그리디(그리디 문제 아닌것)**
