--- a/_posts/Knowledge/Knowledge/2022-08-05-Firebase 업로드 파일 사용법.md
+++ b/_posts/Knowledge/Knowledge/2022-08-05-Firebase 업로드 파일 사용법.md
@@ -13,24 +13,40 @@ typora-root-url: ../../..
 
 
 
-## Firebase upload-files
-
-여기서 할 방식은 자신의 웹에서 firebase에 이미지를 업로드를 할 것이고,  
-이때 업로드한 이미지의 URL을 응답받아 오는데 이것을 몽고DB에 저장해서 계속 사용하면 된다.  
-이 방식으로 제품을 추가하던지 할 수 있다.
-
-* `yarn add firebase`
-
-* firebase 홈페이지에서 로그인 후 프로젝트를 생성
-
-* 프로젝트에 앱 만든 거 코드를 복사한다
-* firebase 홈페이지에서 꼭 storage를 시작하기를 통해서 만들어야 하며, 규칙은 꼭 모두 허용을 해줘야 한다.
-  * 안 하게 되면 아마 403 에러로 접근 실패할 것이다.
-
-* 다시 VS코드에서 firebase.js 파일을 생성 후 복사한 코드를 복붙한다.
-* 완성본은 여기서 [NewProduct.jsx](https://github.com/BH946/fullstack-clone/blob/shop-mern/admin/src/pages/newProduct/NewProduct.jsx), [firebase.js](https://github.com/BH946/fullstack-clone/blob/shop-mern/admin/src/firebase.js) 참고
+**Firebase를 사용하여 웹에서 이미지를 업로드하고, 업로드한 이미지의 URL을 MongoDB에 저장하여 관리하는 방법입니다. 이를 통해 제품 등록 등의 기능을 구현할 수 있습니다.**
 
 <br>
+
+<br>
+
+## Firebase upload-files
+
+<br><br>
+
+### 준비 단계
+
+1. **Firebase 라이브러리 설치**:
+
+   ```
+   yarn add firebase
+   ```
+
+2. **Firebase 프로젝트 생성**: Firebase 홈페이지에서 로그인한 후 프로젝트를 생성합니다.
+
+3. **앱 설정 코드 복사**: Firebase 프로젝트에서 앱을 만들고, 제공된 설정 코드를 복사합니다.
+
+4. **Storage 설정**: Firebase Console에서 Storage를 시작합니다. 이때 규칙은 모두 허용으로 설정해야 하며, 설정하지 않을 경우 403 접근 실패 에러가 발생할 수 있습니다.
+
+5. **Firebase 초기화**: VS Code에서 `firebase.js` 파일을 생성하고 복사한 설정 코드를 붙여넣습니다.
+
+6. **완성본 참고**: 예제 소스는 아래 링크를 참고하세요:
+
+   - [NewProduct.jsx](https://github.com/BH946/fullstack-clone/blob/shop-mern/admin/src/pages/newProduct/NewProduct.jsx)
+   - [firebase.js](https://github.com/BH946/fullstack-clone/blob/shop-mern/admin/src/firebase.js)
+
+<br><br>
+
+### 코드 예제
 
 **firebase.js**
 
@@ -64,7 +80,7 @@ export default app;
 
 **NewProduct.jsx**
 
-* [공식문서](https://firebase.google.com/docs/storage/web/upload-files)를 참고해서 코드 복붙해서 가져오면 된다.
+* [공식문서](https://firebase.google.com/docs/storage/web/upload-files)를 참고하여 작성한 예제입니다.
 
 ```jsx
 // 파일 업로드
@@ -112,5 +128,10 @@ const handleClick = (e) => {
 };
 ```
 
+<br><br>
 
+### 주의 사항
+
+- **Storage 규칙 설정**: Firebase Storage 규칙이 제대로 설정되지 않으면 파일 업로드가 실패할 수 있습니다.
+- **에러 처리**: 업로드 실패 시 적절한 에러 처리 로직을 추가하세요.
 
