--- a/_posts/Knowledge/Knowledge/2022-08-05-도메인 등록, SEO, 구글 애널리틱스 사용법.md
+++ b/_posts/Knowledge/Knowledge/2022-08-05-도메인 등록, SEO, 구글 애널리틱스 사용법.md
@@ -13,66 +13,66 @@ typora-root-url: ../../..
 
 
 
-## Intro
+**웹 호스팅에 naver.com처럼 별명을 붙여주는 "도메인"에 관해 살펴보고(+Favicon)  
+구글, 네이버 등에서 "검색 엔진" 동작 방식과 우리의 웹을 "검색에 등록" 하는 법을 살펴보자.  
+마지막으로 "구글 애널리틱스"로 웹 트래픽 확인을 살펴보자.**
 
-웹 호스팅에 naver.com처럼 별명을 붙여주는 "도메인"에 관해 살펴보고(+Favicon), 
+<br>
 
-구글, 네이버 등에서 "검색 엔진" 동작 방식과 우리의 웹을 "검색에 등록" 하는 법을 살펴본다.
-
-마지막으로 "구글 애널리틱스"로 웹 트래픽 확인을 살펴보자.
-
-<br><br>
+<br>
 
 ## 도메인?
 
-휴대폰의 연락처 목록에서 휴대폰의 번호에 맞는 연락처를 찾아서 전화 통화를 한다. 이런 느낌이다.
+휴대폰의 연락처 목록에서 번호에 맞는 이름을 찾아서 전화하는 느낌이다.
 
-* `휴대폰의 번호 = 컴퓨터의 IP 주소`
-  * 휴대폰으로 전화하는 것처럼 컴퓨터는 IP로 연결해야 한다
-
-* `휴대폰의 연락처 목록 = DNS(Domain Name System)`
-  * 휴대폰의 연락처에 사람들 이름을 도메인
-  * 번호를 IP로 생각할 수 있다.
-* 원래는 IP 주소로 찾아가야 하는데, 이때 DNS를 활용할 수 있다.
-* DNS에는 등록할 수 있는 자격이 필요하므로 도메인 판매 대행 사이트들을 이용한다.
-  * namecheap, GoDaddy, `gabia`, cafe24, freenom, `netlify` 등등..
-* 동작 원리
-  * `mysite.com`이란 도메인을 얻으면, 사용자가 DNS에 요청하고
-  * 그에 맞는 IP를 DNS가 응답을 하고, 해당 IP로 서버에 HTML파일을 요청하는 것이다.
-* `결론 : DNS에 등록만 하면 된다고 이해하면 된다.`
+- `휴대폰의 번호 = 컴퓨터의 IP 주소`
+  - 전화번호로 전화를 거는 것처럼 컴퓨터는 IP로 연결해야 한다.
+- `휴대폰의 연락처 목록 = DNS(Domain Name System)`
+  - 이름이 도메인, 번호는 IP 주소라고 보면 된다.
+- 원래는 IP 주소로 찾아가야 하는데 DNS를 활용하면 된다.
+- DNS에는 등록 자격이 필요하므로 도메인 판매 대행 사이트를 이용한다.
+  - namecheap, GoDaddy, `gabia`, cafe24, freenom, `netlify` 등등...
+- 동작 원리:
+  - `mysite.com` 같은 도메인을 얻으면, 사용자가 DNS에 요청하면
+  - DNS가 맞는 IP를 응답하고, 해당 IP로 서버에 HTML 파일을 요청한다.
+- **결론: DNS에 등록만 하면 된다.**
 
 <br><br>
 
-## 도메인 등록
+### 도메인 등록
 
-이벤트 중인 [도메인_cafe24](https://hosting.cafe24.com) 또는 [도메인_gabia](https://www.gabia.com/)에서 등록하는 예시를 보여주겠다.
+[도메인_cafe24](https://hosting.cafe24.com) 또는 [도메인_gabia](https://www.gabia.com/)에서 등록 예시를 보겠다.
 
-* 회원가입 하기
-* 도메인 검색해보면 `.shop` 도메인이라고 이벤트가 550원(부가세 포함, 1년)이 있으므로 추천!
-  * 예를 들어 `gabia.shop` 이런 건 이미 존재하기 때문에 검색해도 `.shop` 도메인이 안 나옴
-  * 따라서 중복 도메인 이름은 안 된다는 점 참고!
-
-* 결제 후 시간이 소요되고 나면, DNS 관리창에서 등록된 도메인을 확인할 수 있다.
-
-<br>
-
-`netlify`에 https로 보안을 해준다든지, 간단한 호스팅 등 기능이 좀 많기 때문에 `gabia`에서 도메인 등록 후  
-`netlify`에 도메인을 연결해서 사용하겠다! (즉, netlify호스팅+gabia도메인)
-
-* DNS관리 창에서 수정하든지, 처음에 구매할 때 타사 도메인에서 `netlify` 입력하면 된다.
-* `netlify` 등록은 [netlify](https://www.netlify.com/) 여기서 회원가입을 한다. 그리고 test용 html파일 올려주면
-* 자동으로 `.netlify.app` 이런 식으로 생성된다. 하지만 `.shop` 도메인을 구매했기 때문에
-* **Domain settings -> Add Custom Domain**에서 이것으로 등록해서 `netlify`가 애초에 관리하게 할 수 있다. (나는 **bhcoding.shop**로 등록이다)
-  * 직접 파일을 올려서 사이트 수정할 수 있고, 깃과 연동 시 깃 push하면 자동으로 반영
-  * 참고로 테스트여도 당연히 index.html로 올려줄 것
+1. 회원가입
+2. 도메인 검색 (예: `.shop` 도메인 이벤트가 550원일 때 추천!)
+   - 참고로 `gabia.shop` 이런건 이미 존재하므로 검색해도 나오지 않는다.
+   - 중복 도메인은 사용할 수 없다는 점 참고.
+3. 결제 후 DNS 관리창에서 등록된 도메인을 확인.
 
 <br>
 
-그리고 만약 **Check DNS configuration** 들어가서 하는 건 내가 구입한 `gabia`의 DNS를 사용  
-**Set up Netlify DNS**로 들어가서 하는 건 `netlify`의 DNS를 사용
+**실습을 해보자면?**
 
-* 즉, `gabia`에서 도메인을 구매했지만 `netlify`로 옮겨서 DNS 사용할 수 있는 것
-  * 따라서 `netlify`의 많은 기능을 이용할 수 있어서 좋다.
+`netlify`에 HTTPS 보안을 적용하거나 간단한 호스팅 기능이 많다. `gabia`에서 도메인 등록 후 `netlify`에 연결해서 사용한다. (즉, netlify 호스팅 + gabia 도메인 조합)
+
+1. DNS 관리창에서 설정하거나 처음 구매 시 타사 도메인으로 `netlify`를 입력한다.
+2. [netlify](https://www.netlify.com/)에서 회원가입 후 테스트용 HTML 파일 업로드.
+   - 자동으로 `.netlify.app` 형태로 생성됨. `netlify` 가 `gabia` 에서 구매한 도메인을 자동 관리는?
+   - **Custom Domain 에 구매한 도메인 추가**: 예를 들어 gabia에서 구매한 `bhcoding.shop`도메인을 등록.
+3. 파일 업로드로 사이트 수정 가능, 깃과 연동하면 push만으로 자동 반영.
+
+<br>
+
+**참고: DNS 사용 옵션**
+
+- Check DNS configuration: `gabia`의 DNS 사용.
+- Set up Netlify DNS: `netlify`의 DNS 사용.
+- `gabia`에서 도메인을 구매했지만 `netlify`로 옮겨서 DNS 사용할 수 있는 것 (얘도 DNS 지원하니까)
+
+- HTTPS로 보안은 무료로 평생 제공해준다. 적용 시간은 조금 걸리는 편이다.
+
+- 아래 사진은 `gabia` 도메인에서 `netlify` 도메인으로 바꾸는 과정 (간단)
+  - 참고로 적용 시간이 꽤 걸린다. (본인은 한 15분 걸린 듯하다)
 
 ![image-20220805182037465](/images/2022-08-05-도메인, SEO 사용법/image-20220805182037465.png)
 
@@ -80,32 +80,19 @@ typora-root-url: ../../..
 
 <br>
 
-이게 뜨면 그림 아래에 4개의 URL이 나오는데 이것으로 `gabia`에서 네임서버 설정에서 변경해준다.
-
-* 즉, `netlify`의 네임서버로 `gabia`에 구입한 도메인에 네임서버를 수정해서 
-* 이제 `netlify`의 네임서버를 이용하겠다는 의미이다!
-* 참고로 적용 시간이 꽤 걸린다. (필자는 한 15분 걸린 듯하다)
-
 ![image-20220805182405646](/images/2022-08-05-도메인, SEO 사용법/image-20220805182405646.png)
-
-<br>
-
-마지막 HTTPS로 보안은 무료로 평생 제공해준다.  
-적용 시간은 조금 걸리는 편이다.
 
 <br><br>
 
-## Favicon 적용
+### Favicon 적용
 
-**아래 그림을 의미함.**
+**Favicon이란 아래 그림처럼 웹 브라우저에 표시되는 작은 아이콘을 뜻함.**
 
 ![image-20220805183835081](/images/2022-08-05-도메인, SEO 사용법/image-20220805183835081.png)
 
-
-
-변경해 주는 사이트 [CONVERTICO](https://convertico.com/)를 활용해서 ico 이미지를 얻으면 된다.
-
-그리고 아래 코드를 index.html에 적어주고, 만든 favicon.ico의 경로를 잘 지정한다.
+1. [CONVERTICO](https://convertico.com/)에서 ico 파일 생성. -> 원하는 이미지를 여기서 ico 파일로 변환
+2. 아래 코드를 index.html에 추가 (favicon.ico의 경로를 잘 지정)
+   - 생성한 파일은 프로젝트 루트 폴더에 위치하면 됨
 
 ```html
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -114,51 +101,47 @@ typora-root-url: ../../..
 
 <br>
 
-그리고 그림처럼 이곳에 파일을 올리는데 편하게 폴더 전체 한 번에 올려주자.
+아래 그림처럼 이곳에 파일을 올리는데 폴더 전체 한 번에 올려서 배포하자. (따로 따로 올려도 상관X)
 
 ![image-20220805184939940](/images/2022-08-05-도메인, SEO 사용법/image-20220805184939940.png)
 
-<br><br>
-
-## 검색 엔진
-
-**크롤러 로봇이 정보 수집하는 원리는?**
-
-* `robot.txt`를 읽어서 정보 수집하기 전에 접근해도 되는지 정책을 먼저 이해한다
-* 접근해도 된다면, 들어가는데 `sitemap.xml`을 먼저 본다.
-  * 이 사이트에 어떤 URL들이 있는지 그런 경로들을 알아보는 것이다.
-  * 그것을 통해서 로봇이 이 사이트는 이렇게 생겼구나 판단
-* 인식한 그 사이트 URL들로 접속을 해서 사이트에 있는 정보를 가져오게 된다.
+<br>
 
 <br>
 
-**따라서 `robot.txt, sitemap.xml`을 잘 수정하면 좀 더 검색이 잘 될 수 있다.**
+## 검색 엔진?
+
+### 원리
+
+1. `robot.txt`: 검색 로봇이 접근 가능한지 정책 확인. -> 네이버, 구글, 빙 등등 각자 검색로봇이 있음
+2. `sitemap.xml`: URL 경로와 구조를 이해.
+   - 보통 자신의 URL 정보들을 두는데, 이 URL 정보로 해당 사이트 정보를 로봇이 크롤링(데이터수집)
 
 <br><br>
 
 ### Naver
 
-네이버에 검색되게 해보겠다. 사이트 : [searchadvisor](https://searchadvisor.naver.com/)
-
-웹마스터 도구로 입장해서 본인 도메인 사이트 넣어서 시키는 대로 하면 된다.  
-=> 소유권 확인할 때 서버에도(netify) 꼭 업데이트 해줘야 함!
+1. [네이버 웹마스터 도구](https://searchadvisor.naver.com/)에서 본인 도메인 추가.
+2. 소유권 확인 (서버 업데이트 필요)
+   - "DNS방식" 또는 "html파일 방식은 루트 폴더에 추가" 또는 "head태그 방식은 해당 태그에 추가" 하라는 식으로 확인하는 편
+3. `robot.txt`, `sitemap.xml`을 생성 및 적용
 
 <br>
 
-`robot.txt`를 수정해 보겠다.
+**예로** `robot.txt` **적용은?**
 
-* 검색 로봇을 모든 검색 로봇으로 해야, 구글 봇, 다음 등등에서 검색이 될 것이다.
+* 검색 로봇을 모든 검색 로봇으로 설정
 * 그리고 다운을 받아서 index.html 폴더에 같이 두자 (루트 폴더) -> 본인 서버에 올려라는 것
 
 ![image-20220805191523727](/images/2022-08-05-도메인, SEO 사용법/image-20220805191523727.png)
 
 <br>
 
-`sitemap.xml`도 다운받아서 같이 서버에 올려보겠다. -> 이 또한 위치는 root 폴더로
+`sitemap.xml`**도 적용해보자.** -> 생성한 파일은 robot.txt 처럼 본인 서버에 올려둘 것
 
 * [sitemap](https://www.xml-sitemaps.com) 사이트에서 본인 도메인 입력 후 start하고 다운을 받는다.
 
-* 또는 직접 파일을 만들어서 아래 코드를 복붙해도 좋다.
+* 또는 직접 파일을 만들어서 URL을 나열해도 좋다. 아니면, 아래 코드를 복붙해도 좋다.
 
 * ```xml
   ---
@@ -185,78 +168,71 @@ typora-root-url: ../../..
 
 그리고 `robot.txt`를 수정해준다. (본인 도메인으로)
 
-![image-20220805192008183](/images/2022-08-05-도메인, SEO 사용법/image-20220805192008183.png)
+![image-20220805192008183](/images/2022-08-05-도메인, SEO 사용법/image-20220805192008183.png) 
 
 <br>
 
 **마지막으로 서버에 적용**
 
-* 아래처럼 등록이 잘된 걸 확인할 수 있고, 로봇이 더 잘 찾을 수 있겠죠
-* 네이버의 정책이 궁금하다면? `/robots.txt` 들어가면 볼 수 있다.
-
-![image-20220805192201720](/images/2022-08-05-도메인, SEO 사용법/image-20220805192201720.png)
+![image-20220805192201720](/images/2022-08-05-도메인, SEO 사용법/image-20220805192201720.png) 
 
 <br>
 
 네이버 웹마스터 도구에서 `robots.txt`가 잘 적용이 되었나 확인
 
-<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192532614.png" alt="image-20220805192532614" style="zoom: 80%;" />
+<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192532614.png" alt="image-20220805192532614" style="zoom: 80%;" /> 
 
 <br>
 
 `sitemap.xml`도 잘 제출이 되었나 확인
 
-<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192622747.png" alt="image-20220805192622747" style="zoom:80%;" />
-
-<br>
-
-`Yeti(네이버 검색 봇)`가 이제 잘 찾을 텐데, 그래도 웹마스터 도구에서 최적화 보면 안된 게 조금 있다.
-
-<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192829094.png" alt="image-20220805192829094" style="zoom:80%;" />
+<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192622747.png" alt="image-20220805192622747" style="zoom:80%;" /> 
 
 <br><br>
 
 ### Google
 
-구글에서 검색되게 하겠다. 사이트 : [googlesearch](https://search.google.com/search-console/about)
+**구글에서 검색 등록은??**
 
-**자신의 도메인을 입력하면 된다. (일반 깃블로그나 다른 블로그면 URL 접두어로)**
+1. [Google Search Console](https://search.google.com/search-console/about)에서 도메인 추가.
+2. 소유권 주장 (DNS, HTML, 태그 등 방식 다양).
+3. `robot.txt, sitemap.xml` 제출.
 
-<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193406764.png" alt="image-20220805193406764" style="zoom: 80%;" />
+**자신의 도메인을 입력하면 된다. (일반 깃블로그나 다른 블로그면 URL 접두어로 ㄱ)**
+
+<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193406764.png" alt="image-20220805193406764" style="zoom: 80%;" /> 
 
 <br>
 
-**그리고 소유권 주장을 성공해야 한다.(DNS방법 말고도 html, 태그 등 방식은 많음)**
+**그리고 소유권 주장을 성공해야 한다.(아래는 DNS방법 입니다.)**
 
-<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193817423.png" alt="image-20220805193817423" style="zoom: 80%;" />
+<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193817423.png" alt="image-20220805193817423" style="zoom: 80%;" /> 
 
 <br>
 
 `netlify`에서 **Go to DNS panel**로 접근하면 DNS 레코드를 설정할 수 있다. 따라서 여기서 위의 소유권 주장에 맞춰서 인증하면 된다.
 
-만약에 html 방식이면? root폴더에 html을 배치하면 되고, 태그방식이면? head파일에 태그를 배치하면 된다. 
-
-이런 식으로 소유권 주장이 필요하다고만 알면 된다. 어렵지 않다.
-
-![image-20220805193712424](/images/2022-08-05-도메인, SEO 사용법/image-20220805193712424.png)
+![image-20220805193712424](/images/2022-08-05-도메인, SEO 사용법/image-20220805193712424.png) 
 
 
 
-<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193942406.png" alt="image-20220805193942406" style="zoom:80%;" />
+<img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193942406.png" alt="image-20220805193942406" style="zoom:80%;" /> 
 
 <br>
 
 그리고 `sitemap.xml`을 설정한다
 
-* 이미 네이버에 등록할 때 xml파일을 서버에 올렸었으니 해당 파일 URL을 입력해서 바로 제출!
+* 이미 네이버에 등록할 때 xml파일을 자신의 서버에 올렸었으니 해당 파일 URL을 입력해서 바로 제출!
 
 ![image-20220805194126821](/images/2022-08-05-도메인, SEO 사용법/image-20220805194126821.png)
 
-`robots.txt`는 설정 탭에 보면 볼 수 있고, 아마 자동으로? 등록되었던 것 같다. 
+<br>
 
-물론, 서버에는 robots.txt를 올려놔야 한다. sitemap.xml이랑 똑같이 배치하면 된다.
+`robots.txt`는 설정 탭에 보면 볼 수 있고, 아마 자동으로 등록되었다. (이미 네이버 때 서버에 robots.txt를 올려 놨었으니까)
 
-<br><br>
+<br>
+
+<br>
 
 ## SEO - 검색 엔진 최적화
 
@@ -268,33 +244,42 @@ typora-root-url: ../../..
 
 <br>
 
-**검색이 잘되는 방법은 외부, 내부 방식이 있는데 외부보단 내부만 수정하는 것을 추천**
+**검색이 잘되는 방법: 외부, 내부 방식 -> 내부 방식 추천**
 
 * 외부 - 역링크, 방문자 수, 기간 등
   * 역링크 : 다른 사이트에서 자신의 사이트를 언급한 것
-
 * 내부 - 시멘틱 마크업, 메타 태그 등
   * 시멘틱 마크업 : 각자 태그에 의미가 맞게끔 코드 작성하는 것  
-    예로 \<h1>은 제목을 적는다든지 그런 식으로 코드를 작성해줘야 SEO에 유리
+    예로 \<h1>은 제목을 적는다. img 태그엔 캡션을 잘 달자 등등
   * 메타 태그 : html의 head부분에 meta태그를 넣어서 이것저것 설명하는 부분이라 볼 수 있다.  
     즉, \<h1>의 제목과, meta태그의 설명에서 제목과, \<title>의 제목 등등 겹치는 게 많으면 SEO에 유리한 것이다.
-* SEO가 잘 되었는지 확인해주는 사이트 : [SEO CHECK](https://seositecheckup.com/), [이 사이트는 공짜](https://pagespeed.web.dev/)
+    * 예로 깃블로그의 경우 포스팅 게시물 첫 문장이 자동으로 meta태그로 삽입되어 검색엔진의 눈에 띄게 되니까 첫 문장이 중요하다.
+* SEO 확인 사이트 사용: [SEO Check](https://seositecheckup.com/), [PageSpeed](https://pagespeed.web.dev/)
   * 점수도 알려주고, 무엇을 더 수정해야 할지도 알려준다!
   * 꿀팁 : 돈 내라고 로그인하라고 뜨는데 개발자 모드에서 해당 부분 Delete해주면 지우고 볼 수 있음!!
 
-<br><br>
+<br>
 
-## 사용자 분석
+<br>
 
-[google analytics](https://analytics.google.com/analytics/web) 사용!
+## 사용자 분석 - 구글 애널리틱스
 
-다 만들고 나면 웹에서 본인 도메인 넣어주기
+[Google Analytics](https://analytics.google.com/analytics/web)를 사용하여 분석 가능.
+
+1. 도메인 등록.
+2. 태그를 `<head>`에 추가해 데이터 수집.
+
+<br>
+
+**자세히 실습해보자면?**
+
+웹에서 본인 도메인 넣어주기
 
 ![image-20220805201332762](/images/2022-08-05-도메인, SEO 사용법/image-20220805201332762.png)
 
 <br>
 
-태그 안내를 클릭해서 내부의 코드를 \<head> 태그에 넣기
+태그 안내를 클릭해서 내부의 코드를 본인 루트 html 파일 \<head> 태그에 넣기
 
 * 해당 웹 페이지 방문 때마다 코드가 실행되어서 구글analytics로 정보가 전달되는 형태이다.
 
@@ -302,19 +287,20 @@ typora-root-url: ../../..
 
 <br>
 
-구글 애널리틱스를 통해서 분석할 수 있는 게 정말 많으므로 더욱 알고 싶다면 검색해서 알아볼 것
+구글 애널리틱스를 통해서 분석할 수 있는 게 정말 많으므로 홈페이지 둘러보기~!
 
-<br><br>
+<br>
+
+<br>
 
 ## 마무리
 
-`netlify`로 처음에 호스팅을(일정 용량까지 무료!) 하였고 여기에도 도메인을 팔지만, 필자는 도메인을 `gabia`에서 결제했기 때문에 이를 `netlify`로 연결하였다.
+`netlify`로 무료 호스팅을 사용하고, `gabia`에서 결제한 도메인을 연결해 사용. 
 
-참고로 `호스팅`은 홈페이지에 보이는 모든 콘텐츠의 실제 저장 공간이라 생각해도 좋다. (애매하긴 하다)
+참고로 호스팅도 웹호스팅, 서버호스팅 의미를 잘 이해하자.
 
-* `호스팅` 또한 결제해야 하며, `gabia, cafe24 등`에 다 존재한다.
-
-* `filezilla` 같은 FTP앱과 연동해서 사용하고 싶다면 `호스팅`을 결제해서 사용해야 한다.
-
-* 아마도 `netlify`는 FTP와 연동이 안 되는 것 같다. (?)
+- 보통 웹 호스팅과 서버 호스팅의 차이는 하나의 서버를 여러 사용자가 공유해서 사용하냐 안하냐의 차이
+  - 웹 호스팅은 자신의 서버를 가지긴 하지만 다른 사용자도 함께 사용하므로 접근 권한이 제한적
+  - 서버 호스팅은 오직 자신만의 서버를 업체에서 제공해주므로 거의 모근 접근 권한을 가짐
+- 추가로 도메인과 호스팅을 동일하다고 착각하는 바보같은 생각은 하지말자. 
 
