--- a/_posts/Knowledge/Knowledge/2023-07-24-로컬에서 테스트할 때 TIP(내부IP, 외부IP).md
+++ b/_posts/Knowledge/Knowledge/2023-07-24-로컬에서 테스트할 때 TIP(내부IP, 외부IP).md
@@ -12,51 +12,75 @@ typora-root-url: ../../..
 
 
 
-# Intro
-
-**로컬로 서버를 열고, 클라를 열어서 테스트해보거나 외부에서 접속을 해보거나 등등 프로젝트를 테스트할 때 경험을 토대로 작성하는 TIP**
-
-<br><br>
-
-# 외부IP, 내부IP ??
-
-**인터넷이란 TCP/IP 기반 네트워크로 연결된 광범위 통신망이라 할 수 있고, 인터넷 연결된 모든 컴퓨터는 `고유한 IP주소`를 가진다.**
-
-**또한 외부IP는 공인IP, 내부IP는 사설IP라고 할 수 있다.**
-
-**외부IP를 통해서 외부에서 접속할 수 있는 것이고, 내부IP의 경우 `특정 네트워크`에서 기기(컴퓨터)들을 구분하기 위해 사용되는 IP주소이다.**
-
-* 인터넷에 연결된 기기들은 공개적으로 라우터를 통해 공인IP를 할당받기 때문에 이 공인IP 주소를 통해서 인터넷 상 네트워크에서 해당 기기(컴퓨터)에 접근할 수 있는 것이다.
-* `특정 네트워크`는 우리가 사용하는 공유기로써 서로 기기들 간에 와이파이로 연결되고 있는 내부 네트워크라 볼 수 있다.
-  * 이때, 이 기기들을 내부 네트워크에서 접근하기 위해서는 구분할 수 있는 IP주소가 필요하니까 이때 내부IP를 만들어 지정해주는 것이다.
-  * 이 내부IP를 만드는 과정에는 서브네팅 과정이 있으며 이 과정은 하나의 네트워크 주소를 여러 개의 주소로 나누어준다. (자세한 서브넷 설명은 생략하겠음)
+**로컬IP로 서버를 열고, 클라를 열어서 테스트해보거나 외부IP에서 접속을 해보거나 등 테스트 경험 TIP**
 
 <br>
 
-**간단히 IP를 확인하는 방법**
+<br>
 
-* 내부IP는 cmd -> ipconfig 검색 후 ipv4 값  
-* 외부IP는 네이버에 내IP검색으로 확인 or 192.168.0.1를 url에 접속해서 공유기에 들어가서 확인
+## 외부IP, 내부IP 란
+
+**인터넷은 TCP/IP 기반 네트워크로 연결된 거대한 통신망이다. 인터넷에 연결된 모든 기기는** `고유한 IP 주소`**를 가진다.**
+
+**외부IP는 공인IP, 내부IP는 사설IP라고 부른다.**
+
+- **외부IP**: 외부에서 접속 가능한 주소.
+- **내부IP**: 특정 네트워크(예: 공유기)에서 기기들을 구분하기 위해 사용되는 주소.
 
 <br><br>
 
-# 외부나 내부에서 접근법(실제 테스트 방법)
+### 원리
 
-**같은 네트워크(공유기) 즉, 동일 와이파이 사용 시??**
+- 인터넷에 연결된 기기들은 라우터를 통해 공인IP를 할당받는다.
+  - 이 공인IP를 통해 인터넷 상에서 해당 기기에 접근할 수 있다.
+- 특정 네트워크(예: 공유기)는 내부 네트워크를 형성하고, 기기 간 통신을 위해 내부IP를 사용한다.
+  - 내부IP는 서브네팅 과정을 통해 생성된다. (자세한 서브넷 설명은 생략)
 
-* 이미 같은 네트워크를 사용 중이므로 외부IP에서 접근하는 게 아니다.
-* 따라서 당연하게도 접속이 가능하지만 Localhost로는 왜 안 되는지 의문을 가질 수 있다.
-  * 물론, 본인의 컴퓨터에서 서버를 열고 접속을 한 거면 Localhost가 당연히 본인 내부IP로 매핑되므로 문제없이 접근이 된다.
-  * 하지만, 같은 공유기(네트워크)를 사용 중인 다른 컴퓨터를 접속하려면 그 컴퓨터의 내부IP에 접속을 해야 하기 때문에 Localhost(본인IP)로 접속하면 당연히 불가능한 것이다.
+<br><br>
+
+### IP 확인 방법
+
+- **내부IP**: `cmd` 실행 -> `ipconfig` 입력 -> IPv4 주소 확인.
+- **외부IP**: 네이버에서 "내 IP" 검색 또는 `192.168.0.1`로 공유기 접속 후 확인.
 
 <br>
 
-**외부IP에서 내부IP 접근 위한 설정 방법들은??**
+<br>
 
-* 다양하게 있지만 경험해본 방법인 **포트포워딩 방법**을 소개한다.
-* 먼저, 방화벽을 열어주고 공유기의 포트를 설정해서 해당 포트로 들어올 시 원하는 내부IP로 연결되게 설정한다.
-  * 방화벽 설정 -> 인바운드, 아웃바운드 포트 설정(Port) - 내부IP로 연결
-  * 공유기 설정 -> 포트포워딩 설정(Port) - 특정 원하는 IP로 연결
-* 이렇게 하면 위에서 설정한 포트번호를 통해서 외부IP에 접속하면,
-* 해당 포트를 인식해서 설정된 원하는 내부IP로 연결해준다.
+## 외부나 내부에서 접근법(실제 테스트 방법)
+
+**두 가지를 소개한다.**
+
+<br><br>
+
+### 1. 내부IP에서 내부IP 접근 방법 (동일 공유기)
+
+**같은 네트워크(공유기) 사용 즉, 동일 와이파이(내부IP) 사용 시??**
+
+- 이미 같은 네트워크를 사용 중이므로 외부IP에서 접근하는 게 아니며, 내부IP를 사용한다.
+- 내부IP로 쉽게 접속이 가능하지만, Localhost로 접속이 안 되는 경우가 있을 수 있다.
+  - 본인 컴퓨터에서 서버를 열고 접속한 경우, Localhost는 내부IP로 매핑되므로 문제없이 접속 가능.
+  - 하지만 같은 공유기를 사용하는 다른 컴퓨터를 접속하려면, 해당 컴퓨터의 내부IP를 접속해야 한다. 따라서 Localhost(본인IP)로는 접속 불가능.
+
+<br><br>
+
+### 2. 외부IP에서 내부IP 접근 방법
+
+**외부IP에서 내부IP(서버) 접근 위한 설정 방법은??**
+
+다양한 방법이 있지만, 여기서는 **포트포워딩**을 소개한다.
+
+방화벽을 먼저 열어주는게 첫 번째고, 공유기에서 포트포워딩을 하는게 두 번째이다.
+
+1. **방화벽 설정**
+   - 인바운드, 아웃바운드 포트 설정 -> 내부 IP로 연결
+2. **공유기 설정**
+   - 공유기에서 포트포워딩 설정 -> 특정 포트로 들어온 요청을 원하는 내부IP로 연결
+3. **최종 동작**
+   - 외부IP로 접속 시 설정한 포트를 통해 요청이 들어오면,
+   - 공유기가 해당 요청을 내부IP로 전달.
+
+<br>
+
+이 설정을 통해 외부에서 내부 네트워크의 특정 기기에 접근할 수 있다
 
