--- a/_posts/Language/hide/Book/2023-02-20-자바 병렬 프로그래밍 - 1부.md
+++ b/_posts/Language/hide/Book/2023-02-20-자바 병렬 프로그래밍 - 1부.md
@@ -1,6 +1,6 @@
 ---
 title: "자바 병렬 프로그래밍 - 1부"
-categories : [Book]
+categories : []
 tag : [자바, 병렬, 스레드, 멀티스레드, 동시성, 락]
 toc: true
 toc_sticky: true
