--- a/_posts/Language/Java/2024-08-02-(Java 기본 원리) 객체지향이 뭘까 함수형 프로그래밍은.md
+++ b/_posts/Language/Java/2024-08-02-(Java 기본 원리) 객체지향이 뭘까 함수형 프로그래밍은.md
@@ -1,6 +1,6 @@
 ---
 title:  "[Java 기본 원리] 객체지향이 뭘까? 함수형 프로그래밍은?"
-categories : [Java]
+categories : Java
 tag : [oop, solid, programming-paradigm, functional-programming, 자바, 오버로딩, 오버라이딩]
 toc: true
 toc_sticky: true
