--- a/_posts/Language/Python/2021-08-25-(Ptyhon) 파이썬의 복잡한 환경설정 이해하기.md
+++ b/_posts/Language/Python/2021-08-25-(Ptyhon) 파이썬의 복잡한 환경설정 이해하기.md
@@ -1,6 +1,6 @@
 ---
 title:  "[Python] 파이썬의 복잡한 환경설정 이해하기 with Anaconda, Alternatives"
-categories : PY
+categories : [PY, Knowledge]
 tag : [python, anaconda, pip, 파이썬, 아나콘다, 환경설정, 버전관리]
 toc: true
 toc_sticky: true
@@ -13,7 +13,7 @@ published: true
 
 
 
-**python -m pip install 과 python3 -m pip install 은 차이가 있다. 만약, python3.8은 python3이지만 python으로 등록해 놨으면 명령어를 python -m pip install을 사용해야 python3.8이 구동된다. 이런 파이썬의 환경설정을 잘 이해할 필요가 있다.**
+**python -m pip install 과 python3 -m pip install 은 무슨 차이가 있을까? 만약, python3.8은 python3 명령어가 기본이지만 python3이 아닌 python으로 설정했으면 명령어를 python -m pip install을 사용해야 python3.8이 구동된다. 이런 파이썬의 환경설정을 잘 이해할 필요가 있다.**
 
 **이럴 때 간단히** `conda` **명령어를 사용하는 "아나콘다"로 버전 관리가 더 수월할 수 있다. 또한, Alternatives로  Python 뿐만아니라 Java 에도 버전 변경을 간단히 적용하는 방안이 있다.**
 
@@ -140,5 +140,5 @@ where python  # Windows
 
 **만약 따로 신설한 서버의 경우 리눅스 환경을 주로 사용하는데, 이 때는 보통 처음 소개한 명령어로 버전 변경하는 방안을 사용하는 편이다. 이 경우 Python이나 Java나 어디서든 적용할 수 있으니 환경설정 부분은 꼭 잘 이해하고 넘어가야 삽질하는 시간을 줄일 수 있을 것이다. (경험담 ㅠ)**
 
-**마지막으로 환경변수를 직접 만들어 .bat으로 명령어 직접 넣고 하는 방법은 Java의 jdk 버전변경 설정에서 확인할 수 있다. [자바-JDK-버전-변경-TIP](https://bh946.github.io/java/%EC%9E%90%EB%B0%94-JDK-%EB%B2%84%EC%A0%84-%EB%B3%80%EA%B2%BD-TIP)**
+**마지막으로 환경변수를 직접 만들어 .bat으로 명령어 직접 넣고 하는 방법은 Java의 jdk 버전변경 설정에서 확인할 수 있다. [자바-JDK-버전-변경-TIP](https://bh946.github.io/java/knowledge/%EC%9E%90%EB%B0%94-JDK-%EB%B2%84%EC%A0%84-%EB%B3%80%EA%B2%BD-TIP/)**
 
