--- a/_posts/Language/ToyCom(어셈블리어)/2022-02-04-ToyCom 어셈블리어 정리.md
+++ b/_posts/Language/ToyCom(어셈블리어)/2022-02-04-ToyCom 어셈블리어 정리.md
@@ -1,5 +1,5 @@
 ---
-title:  "[어셈블리어]ToyCom정리"
+title:  "ToyCom 어셈블리어 정리"
 categories : Assembly
 tag : [Assembly Languauge, CPU, 어셈블러]
 toc: true
@@ -11,58 +11,57 @@ sidebar:
 
 
 
-## ToyCom이란?
-
-* CPU 동작 방식을 알 수 있게 만든 프로그램
-* 어셈블리어를 사용(ToyCom 전용임)
-* 자세한것은 따로 ppt 확인(표가 중요), 예제 4가지도 따로 확인
+**ToyCom은 CPU 동작 방식을 이해하기 위한 교육용 어셈블리어 프로그램이다. 예시를 통해서 어려운 어셈블리어를 이해 해보자.**
 
 <br>
 
-### 간단한 정리
+<br>
 
-* ToyCom3 를 사용할것. ToyCom2는 문제많음(ToyCom3는 따로 ToyCom2를 수정한 프로그램)
-* 아래 정리 너무 엉망이라서 대충 읽어보고 예시 부분 이해할 수 있다면 충분
+## ToyCom 기본 특징
 
-```
-; 세미콜론은 주석을 의미.
-주소 : 명령어 => 2byte 16진수가 나와서 구성이 되고 있다.
-0000: 이면 앞에 00이 1byte, 뒤에 00이 1byte 겠죠.
-; fE 80 도 마찬가지.
-fE 80은 1111 1110 과 1000 0000 이다. (16진수는 2진수로보면 4자리씩이였죠.)
-; 중요한점은 10000000 11111110 으로 반대로 보고 해석을 해야함(토이컴 특징)
-80 fE 로 해석을 해야한다는 말.
-; 즉, 10000 까지 읽으면 BR(표확인) 나머지는? offset임. 이렇게 해석해야함.
-offset은 그럼 000 1111 1110 이니까 0 f e 로 해석.
-(offset=100h-2h=ofeh) 왜?? 계산기 프로그래머용 HEX 골라주시고, 100-2하면 FE나옴.(h는 16진수 HEX임)
-; BR은 점프였는데, 100h으로 점프해야하는거아니냐 왜 2h를 빼주냐??
-=> PC+2를 미리 하다보니 요 2를 빼줘야한다고 일단 기억.
-=> 추가로 0100 0101까지 토이컴은 읽음.(2byte 주소와 2byte명령어 읽을려고) ToyCom의 특징.
-=> 즉, 애초에 주소가 벌써 +2가 됬으니 -2를 해야한다는 의미임.
-해석하자면 원하는 주소가 100이면 결국? 딱 100주소로 점프하겠죠.
+**프로그램 구조**
 
-; 그리고 토이컴 다시 실행시켜야 모두 reset됨.
-; 그리고 다시 얘기하지만 IR은 80 FE순서로 잘나오고, 메모리는 코드이고, 우리가 입력할때 반드시
-; 반대로 입력해야한다 했으니까 메모리는 FE 80 순서로 나올거다. 햇갈리지 않기!!
-; 우리가 작성할땐 이렇게 해석을 위해 거꾸로 했지만, 프로그램 넣을땐 꼭 다시 반대로
-; 작성해서 기입해줄것!!!!!!!!! 햇갈리지 않게 다시 언급하였다..
-; 즉 세미콜론 부분내용을 미리 우린 쭈욱 써놓고 표보면서 왔다갔다,,,
-; 참고로 표보다가.
-; 토이컴 명령어 코드보면 15~11bit이 5bit로 구성(즉, opcode가 5bit)
-; 우리가 한 picoMips는 4bit였을거임. 엄연히 다르니 햇갈리지말것.
-=> ToyCom의 특징일 뿐이다.
+- 어셈블리어를 사용(ToyCom 전용)
 
-; 참고로 call은 함수사용하는 그런느낌이다. call로 원하는주소 입력시 그주소로 코드로 간다.
-; 마지막에 RET 붙혀서 다시 복귀하는 형식이다.
-```
+- ToyCom3 버전 사용 (ToyCom2은 문제가 많아서 사용X)
 
 <br>
 
-### 예시
+**메모리와 명령어 해석**
 
-#### 설명서
+- `주소 : 명령어` 형태로써 2바이트 16진수로 구성
+  - 8bit=1byte이고, 주소가 0000이라면 앞의 두자리와 뒤의 두자리가 각각 1byte인 것
+  - 예를들어 FE 80 라는 주소를 2진수로 확인해 보면?
+    - 16진수 `FE` → 2진수 `1111 1110`
+    - 16진수 `80` → 2진수 `1000 0000`
+- **중요(토이컴 특징)**: 명령어를 해석할 때 **하위 바이트 → 상위 바이트** 순서로 해석 (예: `80 FE`로 읽음).
+  - 입력 시 명령어를 **상위-하위 바이트 순서**로 입력해야 메모리에 올바르게 저장됨. (즉, 반대로 입력해야 한다는 의미!!)
+  - 예: 명령어가 `80 FE`라면, 프로그램 작성 시 `FE 80`으로 입력.
+  - IR(Instruction Register)은 상위-하위 순서로 처리하므로 혼동 주의.
+- **명령어의 구성:** 상위 5비트는 `opcode`(연산 코드), 나머지 비트는 주소나 데이터.
+  - 예: `LDI` 명령어는 데이터 로드, `CALL` 명령어는 함수 호출.
+  - 참고: `CALL`은 원하는 주소 입력시 그 주소로 이동하고, 마지막에 ret를 붙혀서 다시 복귀하는 형식이다.
+- **점프(=BR) 명령어와 오프셋(=offset) 계산에 중요한 특징**이 있다. `-2` 를 주소계산에 적용해야 하는 점이다.
+  - `PC`(Program Counter)가 이미 다음 명령어로 이동한 상태**(=PC+2를 미리한다는 의미, 토이컴 특징)**이기 때문에, 점프 주소에서 **2를 빼서** 정확한 위치로 점프
+    - 따라서 결국 100의 주소로 점프를 원하면 실제로 100의 주소로 정상 점프 됨
+  - 예: 16진수 fE 80 은 2진수로 나타내면 1111 1110 과 1000 0000 이다. **물론, 10000000 11111110 으로 반대로 보고 해석을 해야함(토이컴 특징)**
+    - 앞의 연산코드인 5bit를 먼저 해석하면 10000 이고 이는 BR 명령어를 의미한다.(점프 명령어)
+    - 나머지 bit를 해석하면  000 1111 1110 이니까 0 f e 로 해석이되고, 이를 offset으로 본다.
+    - 계산기로 프로그래머용 HEX 선택 후 100-2 를 계산해보면 FE가 나옴을 알 수 있다.  
+      그런데, 100h로 점프하는걸 원했던 명령어인데 왜 `-2` 를 하냐면 앞서 설명한 PC+2 특징 때문이다.
+- **참고**
+  - 세미콜론(=;)은 주석을 의미
+  - 토이컴을 다시 실행시켜야 모두 reset됨
 
-```
+<br>
+
+<br>
+
+## 예시로 살펴보기
+
+### 전체 설명서
+
+```text
 report #1
 코드보시면 확인하실 수 있습니다.
 
@@ -85,17 +84,23 @@ R3, R4, R5는 원반의 크기를 나타냈습니다.
 처음 R0가 6인 이유는 원반의 크기를 전부 더한 값이기 때문입니다. (1+2+3)
 ```
 
-<br>
+<br><br>
 
-#### 구현시작 레포트 #1
+### 구현시작 레포트 #1
 
-프로그램은 학번의 끝자리 + 100번지부터 실행. => 108부터  
-A=13, B=16, C=1을 초기화.  
-A-B >0 이면 C를 +1, A-B <= 0이면 C를 -1 (화면캡쳐)  
-A=21 초기화  
-A-B >0 이면 C를 +1, A-B <= 0이면 C를 -1 (화면캡쳐)
+- **동작 흐름:**
+  - 프로그램은 학번의 끝자리(=8) + 100번지부터 실행 => 108부터  
+    A=13, B=16, C=1을 초기화.  
+    A-B >0 이면 C를 +1, A-B <= 0이면 C를 -1  
+    A=21 초기화  
+    A-B >0 이면 C를 +1, A-B <= 0이면 C를 -1
+- **주요 명령어 해석:**
+  - `LDI R0, #13`: A에 13 저장.
+  - `CMP R0, R1`: A와 B 비교. (결과 플래그 레지스터에 저장)
+    - `BRZ`, `BRS`: 조건에 따라 분기. (플래그 레지스터 값 기준 분기)
+  - `INC R2`, `DEC R2`: C 값을 증가/감소.
 
-```
+```assembly
 ; report #1
 
 0000:	FE 80	; BR 0100h(offset=100h-2h=FE) => 10000 000 1111 1110 = 80 FE
@@ -121,16 +126,18 @@ A-B >0 이면 C를 +1, A-B <= 0이면 C를 -1 (화면캡쳐)
 0302:	00 48	; RET
 ```
 
-<br>
+<br><br>
 
-#### 구현시작 레포트 #2
+### 구현시작 레포트 #2
 
-프로그램은 학번의 끝자리 + 100번지부터 실행. => 108부터  
+**동작 흐름:**
+
+프로그램은 학번의 끝자리(=8) + 100번지부터 실행 => 108부터  
 R1 값을 초기화  
 CALL 명령을 사용하여 subroutine 함수를 만들고, subroutine에서 1부터 10까지 더한 값을 R1에 저장  
 RET 명령을 사용하여 Main 함수로 복귀한 후 이중 loop를 돌리면서 구구단을 계산
 
-```
+```assembly
 ; report #2
 
 0000:	FE 80	; BR 0100h(offset=100h-2h=FE) => 10000 000 1111 1110 = 80 FE
@@ -210,16 +217,18 @@ RET 명령을 사용하여 Main 함수로 복귀한 후 이중 loop를 돌리면
 0228:	00 48	; RET
 ```
 
-<br>
+<br><br>
 
-#### 구현시작 레포트 #3
+### 구현시작 레포트 #3
 
-프로그램은 학번의 끝자리 + 50번지부터 실행.  
+**동작 흐름:**
+
+프로그램은 학번의 끝자리(=8) + 50번지부터 실행 => 58부터  
 CALL 명령을 사용하여 subroutine 함수를 만들고, subroutine에서 피보나치 수열을 20개 까지 구하기  
 단 20개 수열 중 제일 마지막 숫자를 R0에 저장한다  
 RET으로 main 복귀 후 종료
 
-```
+```assembly
 ; report #3
 
 0000:	56 80	; BR 0058h(offset=58h-2h=56) => 10000 000 0101 0110 = 80 56
@@ -272,15 +281,17 @@ RET으로 main 복귀 후 종료
 01A0:	00 48	; RET
 ```
 
-<br>
+<br><br>
 
-#### 구현시작 레포트 #4
+### 구현시작 레포트 #4
 
-Main 함수 프로그램은 학번의 끝자리 + 50번지부터 실행  
+**동작 흐름:**
+
+Main 함수 프로그램은 학번의 끝자리(=8) + 50번지부터 실행 => 58부터  
 CALL 명령을 사용하여 subroutine 함수를 만들고, subroutine에서 하노이 탑 문제를 해결(원반, 막대기 3개로 고정)  
 RET으로 main 복귀 후 프로그램 종료
 
-```
+```assembly
 ; report #4
 
 0000:	56 80	; BR 0058h(offset=58h-2h=56) => 10000 000 0101 0110 = 80 56
